--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.0.0",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "bootstrap-vue": "^2.0.0-beta",
     "cross-env": "^5.2.0",
     "express": "^4.16.3",
-    "nuxt": "^2.0.0"
+    "morgan": "^1.9.1",
+    "nuxt": "^2.0.0",
+    "sqlite3": "^4.0.6",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "ava": "^1.1.0",
